2170: Warn on trailing period in PR titles 2248: Warn on leading lowercase letter in PR titles
Reviewed-by: erikj