@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,8 +34,8 @@ import java.util.stream.Collectors;
 class PullRequestCheckIssueVisitor implements IssueVisitor {
     private final List<CheckAnnotation> annotations = new LinkedList<>();
     private final Set<Check> enabledChecks;
-    private final Map<Class<? extends Check>, String> failedChecks = new HashMap<>();
-
+    private final Map<Class<? extends Check>, String> errorFailedChecks = new HashMap<>();
+    private final Map<Class<? extends Check>, String> warningFailedChecks = new HashMap<>();
     private boolean readyForReview;
 
     private final Logger log = Logger.getLogger("org.openjdk.skara.bots.pr");
@@ -54,16 +54,30 @@ class PullRequestCheckIssueVisitor implements IssueVisitor {
         readyForReview = true;
     }
 
-    private void addFailureMessage(Check check, String message) {
-        failedChecks.put(check.getClass(), message);
+    private void setNotReadyForReviewOnError(Severity severity) {
+        if (severity == Severity.ERROR) {
+            readyForReview = false;
+        }
     }
 
-    List<String> messages() {
-        return new ArrayList<>(failedChecks.values());
+    private void addMessage(Check check, String message, Severity severity) {
+        if (severity == Severity.ERROR) {
+            errorFailedChecks.put(check.getClass(), message);
+        } else if (severity == Severity.WARNING) {
+            warningFailedChecks.put(check.getClass(), message);
+        }
     }
 
-    List<String> hiddenMessages() {
-        return failedChecks.entrySet().stream()
+    List<String> errorFailedChecksMessages() {
+        return new ArrayList<>(errorFailedChecks.values());
+    }
+
+    List<String> warningFailedChecksMessages() {
+        return new ArrayList<>(warningFailedChecks.values());
+    }
+
+    List<String> hiddenErrorMessages() {
+        return errorFailedChecks.entrySet().stream()
                            .filter(entry -> !displayedChecks.contains(entry.getKey()))
                            .map(Map.Entry::getValue)
                            .sorted()
@@ -77,7 +91,7 @@ class PullRequestCheckIssueVisitor implements IssueVisitor {
         return enabledChecks.stream()
                             .filter(check -> displayedChecks.contains(check.getClass()))
                             .collect(Collectors.toMap(this::checkDescription,
-                                                      check -> !failedChecks.containsKey(check.getClass())));
+                                                      check -> !errorFailedChecks.containsKey(check.getClass())));
     }
 
     /**
@@ -89,7 +103,7 @@ class PullRequestCheckIssueVisitor implements IssueVisitor {
                             .filter(check -> displayedChecks.contains(check.getClass()))
                             .filter(check -> !(check instanceof ReviewersCheck))
                             .collect(Collectors.toMap(this::checkDescription,
-                                                      check -> !failedChecks.containsKey(check.getClass())));
+                                                      check -> !errorFailedChecks.containsKey(check.getClass())));
     }
 
     private String checkDescription(Check check) {
@@ -109,54 +123,55 @@ class PullRequestCheckIssueVisitor implements IssueVisitor {
         this.configuration = configuration;
     }
 
-    public void visit(DuplicateIssuesIssue e) {
-        var id = e.issue().id();
-        var other = e.hashes()
-                     .stream()
-                     .map(Hash::abbreviate)
-                     .map(s -> "         - " + s)
-                     .collect(Collectors.toList());
+    public void visit(DuplicateIssuesIssue issue) {
+        var id = issue.issue().id();
+        var other = issue.hashes()
+                .stream()
+                .map(Hash::abbreviate)
+                .map(s -> "         - " + s)
+                .toList();
 
         var output = new StringBuilder();
         output.append("Issue id ").append(id).append(" is already used in these commits:\n");
         other.forEach(h -> output.append(" * ").append(h).append("\n"));
-        addFailureMessage(e.check(), output.toString());
-        readyForReview = false;
+        addMessage(issue.check(), output.toString(), issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
-    public void visit(TagIssue e) {
-        log.fine("ignored: illegal tag name: " + e.tag().name());
+    public void visit(TagIssue issue) {
+        log.fine("ignored: illegal tag name: " + issue.tag().name());
     }
 
     @Override
-    public void visit(BranchIssue e) {
-        log.fine("ignored: illegal branch name: " + e.branch().name());
+    public void visit(BranchIssue issue) {
+        log.fine("ignored: illegal branch name: " + issue.branch().name());
     }
 
     @Override
-    public void visit(SelfReviewIssue e)
+    public void visit(SelfReviewIssue issue)
     {
-        addFailureMessage(e.check(), "Self-reviews are not allowed");
-        readyForReview = false;
+        addMessage(issue.check(), "Self-reviews are not allowed", issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
-    public void visit(TooFewReviewersIssue e) {
-        addFailureMessage(e.check(), String.format("Too few reviewers with at least role %s found (have %d, need at least %d)", e.role(), e.numActual(), e.numRequired()));
+    public void visit(TooFewReviewersIssue issue) {
+        addMessage(issue.check(), String.format("Too few reviewers with at least role %s found (have %d, need at least %d)",
+                issue.role(), issue.numActual(), issue.numRequired()), issue.severity());
     }
 
     @Override
-    public void visit(InvalidReviewersIssue e) {
-        var invalid = String.join(", ", e.invalid());
-        addFailureMessage(e.check(), "Invalid reviewers " + invalid);
+    public void visit(InvalidReviewersIssue issue) {
+        var invalid = String.join(", ", issue.invalid());
+        addMessage(issue.check(), "Invalid reviewers " + invalid, issue.severity());
     }
 
     @Override
-    public void visit(MergeMessageIssue e) {
-        var message = String.join("\n", e.commit().message());
-        var desc = "Merge commit message is not `" + e.expected() + "`, but:";
-        if (e.commit().message().size() == 1) {
+    public void visit(MergeMessageIssue issue) {
+        var message = String.join("\n", issue.commit().message());
+        var desc = "Merge commit message is not `" + issue.expected() + "`, but:";
+        if (issue.commit().message().size() == 1) {
             desc += " `" + message + "`";
         } else {
             desc += "\n" +
@@ -164,7 +179,7 @@ class PullRequestCheckIssueVisitor implements IssueVisitor {
                     message +
                     "```";
         }
-        addFailureMessage(e.check(), desc);
+        addMessage(issue.check(), desc, issue.severity());
     }
 
     @Override
@@ -190,32 +205,32 @@ class PullRequestCheckIssueVisitor implements IssueVisitor {
     @Override
     public void visit(AuthorNameIssue issue) {
         // We only get here for contributors without an OpenJDK username
-        addFailureMessage(issue.check(), "Pull request's HEAD commit must contain a full name");
-        readyForReview = false;
+        addMessage(issue.check(), "Pull request's HEAD commit must contain a full name", issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
     public void visit(AuthorEmailIssue issue) {
         // We only get here for contributors without an OpenJDK username
-        addFailureMessage(issue.check(), "Pull request's HEAD commit must contain a valid e-mail");
-        readyForReview = false;
+        addMessage(issue.check(), "Pull request's HEAD commit must contain a valid e-mail", issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
-    public void visit(WhitespaceIssue e) {
+    public void visit(WhitespaceIssue issue) {
         var startColumn = Integer.MAX_VALUE;
         var endColumn = Integer.MIN_VALUE;
         var details = new LinkedList<String>();
-        for (var error : e.errors()) {
+        for (var error : issue.errors()) {
             startColumn = Math.min(error.index(), startColumn);
             endColumn = Math.max(error.index(), endColumn);
             details.add("Column " + error.index() + ": " + error.kind().toString());
         }
 
         var annotationBuilder = CheckAnnotationBuilder.create(
-                e.path().toString(),
-                e.row(),
-                e.row(),
+                issue.path().toString(),
+                issue.row(),
+                issue.row(),
                 CheckAnnotationLevel.FAILURE,
                 String.join("  \n", details));
 
@@ -229,15 +244,15 @@ class PullRequestCheckIssueVisitor implements IssueVisitor {
         var annotation = annotationBuilder.title("Whitespace error").build();
         annotations.add(annotation);
 
-        addFailureMessage(e.check(), "Whitespace errors");
-        readyForReview = false;
+        addMessage(issue.check(), "Whitespace errors", issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
     public void visit(MessageIssue issue) {
         var message = String.join("\n", issue.commit().message());
         log.warning("Incorrectly formatted commit message: " + message);
-        addFailureMessage(issue.check(), "Incorrectly formatted commit message");
+        addMessage(issue.check(), "Incorrectly formatted commit message", issue.severity());
     }
 
     @Override
@@ -252,37 +267,50 @@ class PullRequestCheckIssueVisitor implements IssueVisitor {
         } else {
             desc = "an unknown kind of whitespace (" + issue.kind().name() + ")";
         }
-        addFailureMessage(issue.check(), "The commit message contains " + desc + " on line " + issue.line());
-        readyForReview = false;
+        addMessage(issue.check(), "The commit message contains " + desc + " on line " + issue.line(), issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
     public void visit(IssuesIssue issue) {
-        addFailureMessage(issue.check(), "The commit message does not reference any issue. To add an issue reference to this PR, " +
-                "edit the title to be of the format `issue number`: `message`.");
-        readyForReview = false;
+        addMessage(issue.check(), "The commit message does not reference any issue. To add an issue reference to this PR, " +
+                "edit the title to be of the format `issue number`: `message`.", issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
     public void visit(ExecutableIssue issue) {
-        addFailureMessage(issue.check(), String.format("Executable files are not allowed (file: %s)", issue.path()));
-        readyForReview = false;
+        addMessage(issue.check(), String.format("Executable files are not allowed (file: %s)", issue.path()), issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
     public void visit(SymlinkIssue issue) {
-        addFailureMessage(issue.check(), String.format("Symbolic links are not allowed (file: %s)", issue.path()));
-        readyForReview = false;
+        addMessage(issue.check(), String.format("Symbolic links are not allowed (file: %s)", issue.path()), issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
     public void visit(BinaryIssue issue) {
-        addFailureMessage(issue.check(), String.format("Binary files are not allowed (file: %s)", issue.path()));
-        readyForReview = false;
+        addMessage(issue.check(), String.format("Binary files are not allowed (file: %s)", issue.path()), issue.severity());
+        setNotReadyForReviewOnError(issue.severity());
     }
 
     @Override
     public void visit(ProblemListsIssue issue) {
-        addFailureMessage(issue.check(), issue.issue() + " is used in problem lists: " + issue.files());
+        addMessage(issue.check(), issue.issue() + " is used in problem lists: " + issue.files(), issue.severity());
+    }
+
+    @Override
+    public void visit(IssuesTitleIssue issue) {
+        List<String> messages = new ArrayList<>();
+        if (!issue.issuesWithTrailingPeriod().isEmpty()) {
+            messages.add("Found trailing period in issue title for " + String.join(", ", issue.issuesWithTrailingPeriod()));
+        }
+        if (!issue.issuesWithLeadingLowerCaseLetter().isEmpty()) {
+            messages.add("Found leading lowercase letter in issue title for " + String.join(", ", issue.issuesWithLeadingLowerCaseLetter()));
+        }
+        addMessage(issue.check(), String.join("\n", messages),
+                issue.severity());
     }
 }
